--- a/src/index.css
+++ b/src/index.css
@@ -165,3 +165,8 @@ body {
   height: 500px;
   overflow-y: auto;
 }
+
+.border-select__control {
+  box-shadow: 2px 2px 8px 2px rgba(215, 73, 132, 0.25) inset;
+  padding: 5px;
+}
