--- a/src/index.css
+++ b/src/index.css
@@ -76,12 +76,12 @@ body {
   overflow-x: auto !important;
 }
 
-.ant-select-disabled:where(.css-dev-only-do-not-override-w8mnev).ant-select:not(
+/* .ant-select-disabled:where(.css-dev-only-do-not-override-w8mnev).ant-select:not(
     .ant-select-customize-input
   )
   .ant-select-selector {
   background-color: white;
-}
+} */
 
 .multi-select .ant-select-selection-item {
   background-color: #fc8172 !important;
