--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600;700&display=swap");
 
 .fredoka-400 {
   font-family: "Fredoka", sans-serif;
@@ -21,7 +21,7 @@
 }
 
 body {
-  font-family: "Fredoka", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
 }
 
